wrapping 'sing in' button fixed {

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -24,3 +24,11 @@
     }
   }
 }
+
+@media screen and(max-width: 620px) {
+  .option{
+    padding: 5px 10px;
+    white-space: nowrap;
+  }
+  
+}
